--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "electron-updater": "^2.21.10",
     "source-map-support": "^0.5.5"
   },
   "devDependencies": {
@@ -26,6 +27,11 @@
     "appId": "dci.presenter",
     "mac": {
       "category": "marketing.dci.presenter"
-    }
+    },
+    "publish": [{
+      "provider": "github",
+      "owner": "pajryan",
+      "repo": "presenter-client"
+    }]
   }
 }
