Reinstall from scratch...
Trying to recover from "Env ELECTRON_HMR_SOCKET_PATH is not set" error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "presenter-client",
-  "version": "1.0.4",
+  "name": "presenter",
+  "version": "1.0.7",
   "license": "MIT",
   "scripts": {
     "dev": "electron-webpack dev",
