starting over (again) using a different boilerplate

--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
   "name": "presenter",
-  "version": "1.0.7",
-  "license": "MIT",
+  "version": "1.0.14",
+  "main": "main.js",
+  "description": "presentation display",
+  "author": "PJR",
   "scripts": {
-    "dev": "electron-webpack dev",
-    "compile": "electron-webpack",
-    "dist": "yarn compile && electron-builder",
-    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
-    "pack": "electron-builder --dir",
-    "postinstall": "electron-builder install-app-deps",
+    "start": "electron .",
     "publish": "build --mac --win -p always"
   },
-  "dependencies": {
-    "electron-log": "^2.2.14",
-    "electron-updater": "^2.21.10",
-    "source-map-support": "^0.5.5"
-  },
   "devDependencies": {
-    "electron": "2.0.0",
-    "electron-builder": "^20.11.1",
-    "electron-webpack": "^2.0.1",
-    "webpack": "^4.8.1"
+    "electron": "^1.7.9",
+    "electron-builder": "^20.8.2"
   },
-  "resolutions": {
-    "webpack-sources": "1.0.1"
+  "dependencies": {
+    "electron-log": "^1.3.0",
+    "electron-updater": "^2.21.4"
   },
   "build": {
-    "appId": "dci.presenter",
+    "appId": "com.github.iffy.electronupdaterexample",
     "mac": {
-      "category": "marketing.dci.presenter"
+      "category": "your.app.category.type",
+      "target": [
+        "zip",
+        "dmg"
+      ]
+    },
+    "win": {
+      "target": "nsis"
     },
     "publish": [
       {
