--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "presenter",
-  "version": "1.0.14",
-  "main": "main.js",
-  "description": "presentation display",
-  "author": "PJR",
+  "name": "electron-webpack-quick-start",
+  "version": "1.0.21",
+  "license": "MIT",
   "scripts": {
-    "start": "electron .",
-    "publish": "build --mac --win -p always"
-  },
-  "devDependencies": {
-    "electron": "^1.7.9",
-    "electron-builder": "^20.8.2"
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack",
+    "dist": "yarn compile && electron-builder",
+    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
+    "publish": "yarn compile && build --mac --win -p always"
   },
   "dependencies": {
-    "electron-log": "^1.3.0",
-    "electron-updater": "^2.21.4"
+    "electron-log": "^2.2.14",
+    "electron-updater": "^2.21.10",
+    "source-map-support": "^0.5.5"
+  },
+  "devDependencies": {
+    "electron": "2.0.0",
+    "electron-builder": "^20.11.1",
+    "electron-webpack": "^2.0.1",
+    "webpack": "^4.8.1"
+  },
+  "resolutions": {
+    "webpack-sources": "1.0.1"
   },
   "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
+    "appId": "dci.presenter",
     "mac": {
-      "category": "your.app.category.type",
-      "target": [
-        "zip",
-        "dmg"
-      ]
-    },
-    "win": {
-      "target": "nsis"
+      "category": "marketing.dci.presenter"
     },
     "publish": [
       {
