--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "electron": "2.0.0",
     "electron-builder": "^20.11.1",
     "electron-webpack": "^2.0.1",
+    "electron-webpack-vue": "^2.1.3",
+    "vue": "^2.5.16",
     "webpack": "^4.8.1"
   },
   "resolutions": {
