--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-updater": "^2.21.10",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
+    "resize-observer-polyfill": "^1.5.0",
     "source-map-support": "^0.5.5"
   },
   "devDependencies": {
