--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "electron-log": "^2.2.14",
     "electron-updater": "^2.21.10",
     "jquery": "^3.3.1",
+    "marked": "^0.4.0",
     "popper.js": "^1.14.3",
     "resize-observer-polyfill": "^1.5.0",
+    "simplemde": "^1.11.2",
     "source-map-support": "^0.5.5"
   },
   "devDependencies": {
