--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.3.1",
     "marked": "^0.4.0",
     "popper.js": "^1.14.3",
+    "request": "^2.87.0",
     "resize-observer-polyfill": "^1.5.0",
     "simplemde": "^1.11.2",
     "source-map-support": "^0.5.5"
