--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "request": "^2.87.0",
     "resize-observer-polyfill": "^1.5.0",
     "simplemde": "^1.11.2",
-    "source-map-support": "^0.5.5"
+    "source-map-support": "^0.5.5",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "electron": "2.0.0",
