some tidying up and adding print icon to debug view

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "build": {
     "appId": "dci.presenter",
+    "productName": "DCI Presenter",
     "mac": {
       "category": "marketing.dci.presenter"
     },
