--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "^0.0.22",
+    "animate.css": "^3.7.0",
     "bootstrap": "^4.1.1",
     "d3": "^5.4.0",
     "electron-log": "^2.2.14",
@@ -30,12 +31,12 @@
     "electron": "2.0.0",
     "electron-builder": "^20.11.1",
     "electron-webpack": "^2.0.1",
-    "electron-webpack-vue": "^2.1.3",
+    "electron-webpack-vue": "^2.2.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "webpack": "^4.8.1"
   },
   "resolutions": {
