--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "^0.0.22",
-    "animate.css": "^3.7.0",
+    "animejs": "^2.2.0",
     "bootstrap": "^4.1.1",
     "d3": "^5.4.0",
     "electron-log": "^2.2.14",
