--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-updater": "^2.21.10",
     "jquery": "^3.3.1",
     "marked": "^0.4.0",
+    "mssql": "^4.1.0",
     "popper.js": "^1.14.3",
     "request": "^2.87.0",
     "resize-observer-polyfill": "^1.5.0",
