--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "^0.0.22",
     "animejs": "^2.2.0",
+    "archiver": "^3.0.0",
     "bootstrap": "^4.1.1",
     "d3": "^5.4.0",
     "electron-log": "^2.2.14",
     "electron-updater": "^2.21.10",
     "jquery": "^3.3.1",
     "marked": "^0.4.0",
-    "mssql": "^4.1.0",
+    "mssql": "^4.2.0",
     "popper.js": "^1.14.3",
     "request": "^2.87.0",
     "resize-observer-polyfill": "^1.5.0",
