--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "resize-observer-polyfill": "^1.5.0",
     "simplemde": "^1.11.2",
     "source-map-support": "^0.5.5",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "unzipper": "^0.9.3"
   },
   "devDependencies": {
     "electron": "2.0.0",
