move components to submodule

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "animejs": "^2.2.0",
     "archiver": "^3.0.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-datepicker": "^1.8.0",
     "d3": "^5.4.0",
     "electron-log": "^2.2.14",
     "electron-updater": "^2.21.10",
     "jquery": "^3.3.1",
+    "jsonschema": "^1.2.4",
     "marked": "^0.4.0",
     "mssql": "^4.2.0",
     "popper.js": "^1.14.3",
