--- a/src/renderer/admin/adminUI/generateData/dataSourceConfig.json
+++ b/src/renderer/admin/adminUI/generateData/dataSourceConfig.json
@@ -1,6 +1,7 @@
 {
   "globalInputs":[
     {
+      "referenceId": "globalAsOfDate",
       "label": "As of date (inclusive)",
       "type": "datetime",
       "value": "{today}"
