move disclosures.html to static directory, and move components back to project (removing submodule)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "presenter",
+  "author": "DCI",
+  "description": "presenter client",
   "version": "1.0.30",
   "license": "MIT",
   "scripts": {
