--- a/src/renderer/admin/adminUI/generateData/dataSourceConfig.json
+++ b/src/renderer/admin/adminUI/generateData/dataSourceConfig.json
@@ -11,7 +11,6 @@
   "dataSources" : [
     {
       "name": "DoubleNumber",
-      "filenames": ["DoubleNumber.json"],
       "isStoredProcedure": false,
       "sqlString": "select {1}*2 as passedValue",
       "sqlParameters": [
@@ -20,29 +19,81 @@
           "type": "int",
           "value": 6
         }
+      ],
+      "resultHandling": [
+        {
+          "filename": "DoubleNumber.json",
+          "qa": {
+            "scripts": [],
+            "asOfDateScript": "maxDate(date)",
+            "chart": null
+          }
+        }
+      ]
+    },
+
+    {
+      "name": "TripleNumber",
+      "isStoredProcedure": false,
+      "sqlString": "select {1}*3 as passedValue",
+      "sqlParameters": [
+        {
+          "label": "Number to triple",
+          "type": "int",
+          "value": 10
+        }
+      ],
+      "resultHandling": [
+        {
+          "filename": "TripleNumberFile.json",
+          "qa": {
+            "scripts": [],
+            "asOfDateScript": "maxDate(date)",
+            "chart": null
+          }
+        }
       ]
     },
 
     {
       "name": "BrokerLiquidity",
-      "filenames": ["BrokerLiquidity.json"],
       "isStoredProcedure": true,
       "sqlString": "marketing2..broker_liquidity",
-      "sqlParameters": []
+      "sqlParameters": [],
+      "resultHandling": [
+        {
+          "filename": "BrokerLiquidity.json",
+          "qa": {
+            "scripts": [],
+            "asOfDateScript": "maxDate(date)",
+            "chart": null
+          }
+        }
+      ]
     },
-
 
     {
       "name": "RiskPremium",
+      "notes": "Provides DP, market spread and expected loss over time",
       "filenames": ["RiskPremium.json"],
       "isStoredProcedure": false,
       "sqlString": "select convert(VARCHAR(10),price_date,101) as date, dp1 as dp, spread as marketSpread, expected_loss as expectedLossSpread from macro..expected_loss order by price_date",
-      "sqlParameters": []
+      "sqlParameters": [],
+      "resultHandling": [
+        {
+          "filename": "RiskPremium.json",
+          "qa": {
+            "scripts": ["findOutlier('dp', 'marketSpread', 'expectedLossSpread')"],
+            "asOfDateScript": "maxDate(date)",
+            "chart": null
+          }
+        }
+      ]
+      
     },
 
     {
       "name": "TestUserName",
-      "filenames": ["TestUserName1.json", "TestUserName2.json"],
       "isStoredProcedure": false,
       "sqlString": "select * from user_admin..user_login; select * from user_admin..user_login where user_id < {1} and ldap_user_name like '%{2}%'",
       "sqlParameters": [
@@ -55,6 +106,24 @@
           "label": "ldap name contains:",
           "type": "varchar",
           "value": "a"
+        }
+      ],
+      "resultHandling": [
+        {
+          "filename": "TestUserName1.json",
+          "qa": {
+            "scripts": [],
+            "asOfDateScript": "",
+            "chart": null
+          }
+        },
+        {
+          "filename": "TestUserName2.json",
+          "qa": {
+            "scripts": [],
+            "asOfDateScript": "",
+            "chart": null
+          }
         }
       ]
     }
