start to add QC component

--- a/src/renderer/admin/adminUI/generateData/dataSourceConfig.json
+++ b/src/renderer/admin/adminUI/generateData/dataSourceConfig.json
@@ -52,7 +52,7 @@
         {
           "filename": "TripleNumberFile.json",
           "qa": {
-            "scripts": [],
+            "scripts": ["findMedian('passedValue')"],
             "asOfDateScript": "maxDate(date)",
             "chart": null
           }
